[package]
name = "pqc-signcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
ctr = "0.9.2"
hkdf = "0.12.4"
hmac = "0.12.1"
lockstitch = "0.25.2"
pqcrypto = { version = "0.17.0", default-features = false, features = ["pqcrypto-kyber", "pqcrypto-dilithium"] }
sha2 = { version = "0.10.8", features = ["asm"] }

[workspace]
members = ["benchmarks"]
